--- a/src/app/movie-form/movie-form.component.html
+++ b/src/app/movie-form/movie-form.component.html
@@ -19,16 +19,19 @@
     [async]="true"
     (textTyped)="getStars($event)">
   </typeahead>
+  <label>Origin (typeahead)</label>
+  <input-boolean formControlName="foreign"></input-boolean>
   <hr>
 
   <h4>Raw data in "movieForm.value":</h4>
   <p>{{movieForm.value | json}}</p>
 
-  <div [hidden]="!movieForm.value?.title || !movieForm.value?.year || !movieForm.value?.genre">
+  <div>
     <h4>Detail</h4>
     <p>
       <strong>{{movieForm.value?.title}}</strong> 
-      is a movie from <strong>{{movieForm.value?.year}}</strong> 
+      is a <strong>{{movieForm.value?.foreign ? 'foreign' : 'national'}}</strong> movie 
+      from <strong>{{movieForm.value?.year}}</strong> 
       of the <strong>{{movieForm.value?.genre}}</strong> genre, 
       staring <strong>{{movieForm.value?.mainStar}}</strong>
     </p>
