--- a/src/app/movie-form/movie-form.component.html
+++ b/src/app/movie-form/movie-form.component.html
@@ -17,6 +17,7 @@
     [maxSuggestions]="4"
     (suggestionSelected)="selectMainStar($event)"
     [async]="true"
+    [defaultValue]="defaultValue"
     (textTyped)="getStars($event)">
   </typeahead>
   <label>Origin (typeahead)</label>
